fix: card height overlap laptop vh

--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -42,7 +42,7 @@ body
   padding: 16px
   border-radius: 20px
   background-color: $color-card
-  margin: 50px 0
+  margin: 15px 0
 
 .sidebar
   padding: 8px 16px
@@ -66,7 +66,7 @@ body
   flex-direction: column
   justify-content: space-between
   width: 100%
-  padding: 22px 12px 10px 40px
+  padding: 7px 12px 0px 40px
 
 .form
   height: 100%
